# glycopeptide_feature_learning

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yaml  test.yaml
_c/: README.md  ccommon_math.pxd  ccommon_math.pyx  constants.pxd  cpeak_relations.pxd  cpeak_relations.pyx  feature.pxd  ion_type_map.pxd  ion_type_map.pyx  spectrum.pxd  spectrum.pyx
feature_learning/: _common_features.py  amino_acid_classification.py  approximation.py  common.py  data_source.py  feature.py  fit_model.py  frequency.py  histogram.py  matching.py  multinomial_regression.py  partitions.py  peak_relations.py  scoring.py  utils.py
feature_learning/_c/: amino_acid_classification.pxd  amino_acid_classification.pyx  approximation.pxd  approximation.pyx  model_types.pxd  model_types.pyx  peak_relations.pyx
feature_learning/scoring/: __init__.py  base.py  mixture.py  multipart_fdr.py  predicate.py  scorer.py
glycopeptide_feature_learning/: common_features.py  data_source.py  evaluate_journals.py  fit_model.py  multinomial_regression.py  oxonium.py  partitions.py  peak_relations.py  plot.py  tool.py
glycopeptide_feature_learning/_c/: approximation.pyx  model_types.pxd  model_types.pyx  peak_relations.pxd  peak_relations.pyx
glycopeptide_feature_learning/data/: pearson.txt
glycopeptide_feature_learning/scoring/: __init__.py  base.py  fdr_model.py  mixture.py  multipart_fdr.py  predicate.py  scorer.py
glycopeptide_feature_learning/test/: common.py  (+1 more)
tests/: test_cli.py  test_multinomial_models.py  test_scorer.py
(+46 files in other folders)
