

[tool.ruff]

line-length = 120


[build-system]
requires = ["setuptools",
            "wheel",
            "Cython",
            "ms_deisotope >= 0.0.36",
            "glypy >= 1.0.6",
            "glycopeptidepy >= 0.0.24",
            "glycresoft @ https://github.com/mobiusklein/glycresoft/archive/refs/heads/master.zip", # Awaiting release on package index
            "numpy==1.23.2; python_version >= '3.10'",
            "oldest-supported-numpy; python_version >= '3.8' and python_version < '3.10'",
            "numpy==1.16.1; python_version <= '3.7' and python_version >= '3'",
            "numpy==1.13.3; python_version=='2.7'",
           ]